# torchspy

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: main.yml
docs/: index.md  modules.md  trace_graph.md
examples/: graph_example.sh  run_example.py
examples/output/tensors/: step0.blocks.0.attn.attn.call0.pt  step0.blocks.0.attn.k.call0.pt  step0.blocks.0.attn.q.call0.pt  step0.blocks.0.attn.v.call0.pt  step0.blocks.0.mlp.hidden.call0.pt  step0.blocks.1.attn.attn.call0.pt  step0.blocks.1.attn.k.call0.pt  step0.blocks.1.attn.q.call0.pt  step0.blocks.1.attn.v.call0.pt  step0.blocks.1.mlp.hidden.call0.pt
examples/output/traces/: forward.txt  forward_graph.json
modules/: index.html
scripts/: trace_to_graph.py
search/: search_index.json
src/torchspy/: __init__.py  _base.py  context.py  saver.py  trace_graph.py  tracer.py
tests/: __init__.py  conftest.py  test_context.py  test_context_extra.py  test_debugger.py  test_init_lazy.py  test_saver.py  test_trace_graph.py  test_trace_graph_extra.py  test_tracer.py
